# DH_live

./: pyproject.toml
video_data/000002/data/: processed.pkl
web_demo/: README.md  server_realtime.py
web_demo/voiceapi/: llm.py
