[project]
name = "2d-dh-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "glfw>=2.9.0",
    "gradio>=5.29.1",
    "kaldi-native-fbank>=1.21.1",
    "mediapipe>=0.10.21",
    "pyglm>=2.8.2",
    "pyopengl>=3.1.9",
    "scikit-learn>=1.6.1",
    "sherpa-onnx>=1.12.0",
    "socksio>=1.0.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
